# esp-brookesia

./: .build-rules.yml  .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  check_copyright_config.yaml  conftest.py  esp_brookesia_conf.h  esp_ui_conf.h  idf_component.yml  library.properties  pytest.ini
agent/brookesia_agent_helper/host_test/: CMakeLists.txt  main.cpp
agent/brookesia_agent_openai/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
agent/brookesia_agent_openai/openai/: https_client.h  openai.c  openai_datachannel.cpp  openai_datachannel.hpp  openai_signaling.c  openai_signaling.h
agent/brookesia_agent_openai/src/: agent_openai.cpp  https_client.c  openai.c  openai.h
agent/brookesia_agent_xiaozhi/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
agent/brookesia_agent_xiaozhi/esp_xiaozhi/: CMakeLists.txt  Kconfig.projbuild  esp_iot_chat.c  esp_iot_mqtt.c  esp_iot_settings.c  idf_component.yml
agent/brookesia_agent_xiaozhi/src/: agent_xiaozhi.cpp
agent/brookesia_agent_xiaozhi/xiaozhi/: Kconfig
apps/brookesia_app_ai_profile/: CMakeLists.txt  esp_brookesia_app_ai_profile.cpp  esp_brookesia_app_ai_profile.hpp  idf_component.yml
apps/brookesia_app_ai_profile/assets/: esp_brookesia_app_icon_launcher_ai_profile_112_112.c
apps/brookesia_app_ai_profile/ui/: ui.c  ui.h
apps/brookesia_app_pos/ui/: CMakeLists.txt  ui.c  ui.h
apps/brookesia_app_rainmaker/: .gitignore  CMakeLists.txt  README.md  README_CN.md  USER_GUIDE_CN.md  USER_GUIDE_EN.md  esp_brookesia_app_rainmaker.cpp  esp_brookesia_app_rainmaker.hpp  idf_component.yml
apps/brookesia_app_rainmaker/assets/: esp_brookesia_app_icon_launcher_rainmaker_112_112.c
apps/brookesia_app_rainmaker/backend/: rainmaker_api_handle.c  rainmaker_app_backend.c  rainmaker_app_backend_shared.c  rainmaker_app_backend_util.c  rainmaker_device_group_manager.c  rainmaker_list_manager.c  rainmaker_user_api_hal_esp.c
apps/brookesia_app_rainmaker/pc/: .gitignore  CMakeLists.txt  README.md  README_CN.md  TEST_CASE_PC.md  VISUAL_TEST_README.md  app_rmaker_user_api_pc.c  app_rmaker_user_transport_pc.c  esp_random_pc.c  http_smoke.c  lv_conf.h  lv_sdl_port.c  lv_sdl_port.h  main_pc.c  rainmaker_app_backend_layout_test.c  rainmaker_app_backend_layout_test.h  rainmaker_app_backend_util_pc.c  rainmaker_backend_pc_stub.c  rainmaker_standard_device_pc.c  rainmaker_user_api_hal_pc.c  run_visual_tests.sh  ui_detail_stubs_pc.c  ui_pc_layout_test.c  ui_pc_smoke_test.c  ui_pc_stubs.c  ui_pc_visual_test.c  ui_screen_home_minimal.c  visual_test_compare.py
apps/brookesia_app_rainmaker/ui/: ui.c  ui.h  ui_common.c  ui_display.c  ui_display.h  ui_events.h  ui_gesture_nav.c  ui_gesture_nav.h  ui_i18n.c  ui_i18n.h  ui_lv_compat.h  ui_nav.c  ui_nav.h
apps/brookesia_app_settings/: CMakeLists.txt  app_ap_conf.cpp  app_ap_conf.hpp  app_sntp.c  app_sntp.h  esp_brookesia_app_settings.cpp  esp_brookesia_app_settings.hpp  esp_brookesia_app_settings_data.hpp  esp_brookesia_app_settings_manager.cpp  esp_brookesia_app_settings_manager.hpp  esp_brookesia_app_settings_ui.cpp  esp_brookesia_app_settings_ui.hpp
apps/brookesia_app_settings/assets/: esp_brookesia_app_settings_assets.h
apps/brookesia_app_settings/html/: wifi.html
apps/brookesia_app_settings/private/: esp_brookesia_app_settings_utils.hpp
apps/brookesia_app_settings/stylesheets/: stylesheets.hpp
apps/brookesia_app_timer/ui/: CMakeLists.txt  ui.c  ui.h
core/brookesia_core/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  esp_brookesia.h  esp_brookesia.hpp  esp_brookesia_internal.h  idf_component.yml
core/brookesia_core/ai_framework/: Kconfig  esp_brookesia_ai_framework_internal.h
core/brookesia_core/docs/: how_to_use.md  how_to_use_CN.md  system_ui_phone.md  system_ui_phone_CN.md
core/brookesia_core/gui/: Kconfig  esp_brookesia_gui_internal.h
core/brookesia_core/services/: Kconfig  esp_brookesia_services_internal.h
core/brookesia_core/systems/: Kconfig  esp_brookesia_systems_internal.h
core/brookesia_core/test_apps/: sdkconfig.ci.320_240  sdkconfig.ci.320_480  sdkconfig.ci.720_1280  sdkconfig.ci.800_1280  sdkconfig.ci.default  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
examples/service_console/main/: CMakeLists.txt  Kconfig.projbuild  agents_auth.cpp  agents_auth.hpp  ai_agents.cpp  ai_agents.hpp  audio_service.cpp  audio_service.hpp  board.cpp  board.hpp  expression.cpp  expression.hpp  general_services.cpp  general_services.hpp  idf_component.yml  main.cpp  services.cpp  services.hpp
hal/brookesia_hal_adaptor/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
hal/brookesia_hal_adaptor/src/: audio_device.cpp  audio_device.hpp  lcd_display_device.cpp  lcd_display_device.hpp
hal/brookesia_hal_adaptor/test_apps/: CMakeLists.txt  idf_ext.py  partitions_16m.csv  partitions_8m.csv  pytest_hal_adaptor.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
hal/brookesia_hal_adaptor/tools/: media_lib_sal_esp_tls_idf6.patch
hal/brookesia_hal_linux/: CMakeLists.txt  Kconfig  README.md  README_CN.md
hal/brookesia_hal_linux/host_test/: CMakeLists.txt  main.cpp  real_smoke.cpp
hal/brookesia_hal_linux/scripts/: install_linux_deps.sh
hal/brookesia_hal_wasm/: CMakeLists.txt
hal/brookesia_hal_wasm/src/: device.cpp
products/speaker/main/: CMakeLists.txt  Kconfig.projbuild  audio_sys.c  audio_sys.h  coze_agent_config_default.h  main.cpp  (+7 more)
service/brookesia_service_manager/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  Usage.md  Usage_CN.md  idf_component.yml
service/brookesia_service_nvs/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
service/brookesia_service_video/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
utils/brookesia_lib_utils/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
(+3931 files in other folders)
