set(COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENT_SRC_DIR ${COMPONENT_DIR}/src)
set(COMPONENT_INCLUDE_DIRS ${COMPONENT_DIR}/include)
set(COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_SRC_DIR})
set(COMPONENT_PRIV_REQUIRES "esp_http_client")
set(COMPONENT_REQUIRES "json esp-tls")
set(COMPONENT_SRCS_C "")
set(COMPONENT_SRCS_CPP "")
set(COMPONENT_SRCS_C_COMPILE_FLAGS "")
set(COMPONENT_SRCS_CPP_COMPILE_FLAGS "")
set(COMPONENT_SRCS_COMPILE_OPTIONS "")

#
# Agent
#
file(GLOB_RECURSE AGENT_SRCS_C ${COMPONENT_SRC_DIR}/*.c)
file(GLOB_RECURSE AGENT_SRCS_CPP ${COMPONENT_SRC_DIR}/*.cpp)
list(APPEND COMPONENT_SRCS_C ${AGENT_SRCS_C})
list(APPEND COMPONENT_SRCS_CPP ${AGENT_SRCS_CPP})

#
# OpenAI
#
file(GLOB_RECURSE OPENAI_SRCS_C ${COMPONENT_DIR}/openai/*.c)
file(GLOB_RECURSE OPENAI_SRCS_CPP ${COMPONENT_DIR}/openai/*.cpp)
list(APPEND COMPONENT_SRCS_C ${OPENAI_SRCS_C})
list(APPEND COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_DIR}/openai)
list(APPEND COMPONENT_SRCS_CPP ${OPENAI_SRCS_CPP})

#
# Register Component
#
idf_component_register(
    SRCS ${COMPONENT_SRCS_C} ${COMPONENT_SRCS_CPP}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_INCLUDE_DIRS ${COMPONENT_PRIVATE_INCLUDE_DIRS}
    PRIV_REQUIRES ${COMPONENT_PRIV_REQUIRES}
    REQUIRES ${COMPONENT_REQUIRES}
)
if(CONFIG_BROOKESIA_AGENT_OPENAI_ENABLE_AUTO_REGISTER)
    set(BROOKESIA_AGENT_OPENAI_PLUGIN_SYMBOL agent_openai_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_AGENT_OPENAI_PLUGIN_SYMBOL=${BROOKESIA_AGENT_OPENAI_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_AGENT_OPENAI_PLUGIN_SYMBOL}")
endif()

include(package_manager)
cu_pkg_define_version(${CMAKE_CURRENT_LIST_DIR})

#
# Compile Options
#
target_compile_options(${COMPONENT_LIB}
    PUBLIC
        ${COMPONENT_SRCS_COMPILE_OPTIONS}
)
set_source_files_properties(${COMPONENT_SRCS_C}
    PROPERTIES
        COMPILE_FLAGS "${COMPONENT_SRCS_C_COMPILE_FLAGS}"
)
set_source_files_properties(${COMPONENT_SRCS_CPP}
    PROPERTIES
        COMPILE_FLAGS "${COMPONENT_SRCS_CPP_COMPILE_FLAGS}"
)
